# octora

./: .gitignore  Anchor.toml  Cargo.toml  README.md  claude-session.jsonl  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.superstack/: build-context.md
briefs/: 2026-04-29-octora-pm-bd-one-pager.md
docs/: grant-application.md  on-chain-mixer-summary.md  stealth-mixer-mvp-architecture.md  tornado-mixer-architecture.md
infra/: docker-compose.dev.yml
octora-api/: .env.example  .gitignore  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json  vitest.config.ts
octora-landing/: index.html  package-lock.json  package.json  vite.config.ts
octora-web/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
programs/octora-executor/: Cargo.toml
programs/octora-executor/src/: constants.rs  dlmm.rs  errors.rs  lib.rs  state.rs
programs/octora-executor/src/instructions/: add_liquidity.rs  claim_fees.rs  init_position.rs  mod.rs  withdraw_close.rs
programs/octora-mixer/: Cargo.toml
programs/octora-mixer/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/octora-mixer/src/instructions/: deposit.rs  initialize.rs  mod.rs  set_paused.rs  withdraw.rs
programs/octora-mixer/src/verifier/: groth16.rs  mod.rs
scripts/: compute-zero-hashes.mjs  convert-vk-to-rust.mjs
tests/: octora-executor-happy-path.ts  octora-executor-init-position.ts  octora-executor-lifecycle.ts  octora-mixer.ts
(+206 files in other folders)
