[package]
name = "octora-executor"
version = "0.1.0"
description = "On-chain executor that wraps Meteora DLMM via CPI on behalf of stealth wallets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "octora_executor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
