[package]
name = "octora-mixer"
version = "0.1.0"
description = "On-chain privacy mixer with Groth16 ZK proof verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "octora_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
groth16-solana = "0.2.0"
